--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                         <img src="assets/img/work1.jpg" alt=""> 
                         COMING SOON...
                     </a> -->
-                     <a href="" class="work__img">
+                     <a href="https://prajwalgupta.github.io/p2bulb/" class="work__img">
                         <img src="assets/img/1.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://prajwalgupta.github.io/p1finger/" class="work__img">
                         <img src="assets/img/2.png" alt="">
                     </a> 
                     <!-- <a href="" class="work__img"> 
@@ -164,7 +164,7 @@
                     <a href="" class="work__img">
                         <video src="assets/img/c2.mp4" alt="">
                     </a> -->
-                     <a href="" class="work__img">
+                     <a href="https://prajwalgupta.github.io/p3infinity/" class="work__img">
                         <img src="assets/img/3.png" alt="">
                     </a> 
                 </div>
